# esp_msp3520

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  esp-msp3520.code-workspace  esp_msp3520.code-workspace  idf_component.yml  sdkconfig.defaults
.claude/: settings.json
.claude/skills/idf/: SKILL.md
.serena/: project.yml
components/esp_lcd_ili9488/: CMakeLists.txt  esp_lcd_ili9488.c
components/msp3520/: CMakeLists.txt  Kconfig  idf_component.yml
components/msp3520/test_apps/main/: CMakeLists.txt  test_app_main.c  test_reboot.c  test_screen_protect.c
components/xpt2046/: CMakeLists.txt  Kconfig.projbuild  esp_lcd_touch_xpt2046.c  idf_component.yml
docs/: esp32-s3-devkitc-1.md  msp3520.md  project-overview.md  xiao-esp32c6.md
docs/devkits/: esp32-c6-super-mini.md  nanoesp32-c6.md
docs/modules/: msp3520.md
docs/plans/: 2026-03-08-ili9488-driver-and-demo.md  2026-03-08-lvgl-integration-design.md
examples/basic/: CMakeLists.txt  sdkconfig.defaults
examples/finger-paint/: CMakeLists.txt  sdkconfig.defaults
examples/paint/: CMakeLists.txt  README.md
include/: msp3520.h
iteration/: plan.md  research.md  spec.md
main/: CMakeLists.txt  Kconfig.projbuild  console.c  console.h  idf_component.yml  ili9488-test.c  touch_calibration.c  touch_calibration.h
src/: backlight.c  backlight.h  console_commands.c  msp3520.c  msp3520_priv.h  xpt2046.h
test_apps/: CMakeLists.txt  sdkconfig.defaults
test_apps/main/: CMakeLists.txt  idf_component.yml  test_app_main.c  test_indev_sim.c  test_indev_sim.h  test_reboot.h  test_screen_protect.c
(+43 files in other folders)
